# AutoIntelli

./: .gitignore  LICENSE  README.md  pyproject.toml
autointelli/: __init__.py  command.txt  conf.yaml  optuna_base.py
autointelli/abstracts/: automls_abstracts.py
autointelli/base_classes/: base_automls.py
