[tool.poetry]
name = "AutoIntelli"
version = "0.1.0"
description = "AutoIntelli"
authors = ["drhosseinjavedani <h.javedani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
wheel = "^0.40.0"
setuptools = "^67.7.2"
lohrasb = "^3.6.0"
zoish = "^3.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"